feat: added swagger UI to labels API
